# NLP-w5

./: arabic_token_classification.ipynb  pyproject.toml
W2/lecture_v2/: L02_pandas.ipynb
W4/C1_M1_Getting_Started/C1M1_Assignment/: C1M1_Assignment.ipynb
W5_NLP/M1/sessions/: 02_corpus.ipynb  03_prep.ipynb  05_classifier_ex1.ipynb  06_classifier_ex2.ipynb  07_information_retrieval_ex.ipynb  08_topic_modeling_ex.ipynb  TF_TFIDF_From_Scratch.ipynb
W5_NLP/M3/labs/: 01_Text_Classification.ipynb  02_NLI.ipynb
