[project]
name = "w1d3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter-collaboration>=4.2.0",
    "jupyter-mcp-tools>=0.1.4",
    "jupyterlab>=4.5.1",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = [
    "W2/week2-data-work",
]
